Correcciones en ejemplos.

--- a/api-reference/facturas/examples/basic-foreign.mdx
+++ b/api-reference/facturas/examples/basic-foreign.mdx
@@ -31,7 +31,7 @@ Se trata de la remisión de un registro de facturación de alta de factura ordin
     }
   ],
   "full_invoice_number": "2024-000022",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura ordinaria por entrega de mercancías.",
   "total_quota": 21.00,
@@ -41,9 +41,9 @@ Se trata de la remisión de un registro de facturación de alta de factura ordin
       "tax_type_key": "01", // Impuesto sobre el Valor Añadido (IVA)
       "vat_tax_regime_key": "01", // Operación de régimen general
       "operation_type_key": "S1", // Operación Sujeta y No exenta - Sin inversión del sujeto pasivo
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ]
 }
