--- a/api-reference/facturas/examples/basic.mdx
+++ b/api-reference/facturas/examples/basic.mdx
@@ -29,7 +29,7 @@ Se trata de la remisión de un registro de facturación de alta de una factura o
     }
   ],
   "full_invoice_number": "2025-000001",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-01",
   "operation_description": "Factura ordinaria por entrega de mercancías.",
   "total_quota": 21.00,
@@ -39,9 +39,9 @@ Se trata de la remisión de un registro de facturación de alta de una factura o
       "tax_type_key": "01", // Impuesto sobre el Valor Añadido (IVA)
       "vat_tax_regime_key": "01", // Operación de régimen general
       "operation_type_key": "S1", // Operación Sujeta y No exenta - Sin inversión del sujeto pasivo
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ]
 }
