--- a/api-reference/facturas/examples/correction.mdx
+++ b/api-reference/facturas/examples/correction.mdx
@@ -32,7 +32,7 @@ Para subsanar un registro debemos enviar el campo `correction_key` con el valor 
     }
   ],
   "full_invoice_number": "2024-000018",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura ordinaria por entrega de mercancías.",
   "total_quota": 21.00,
@@ -42,9 +42,9 @@ Para subsanar un registro debemos enviar el campo `correction_key` con el valor 
       "tax_type_key": "01",
       "vat_tax_regime_key": "01",
       "operation_type_key": "S1",
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ]
 }
