--- a/api-reference/facturas/examples/rectificative-differences.mdx
+++ b/api-reference/facturas/examples/rectificative-differences.mdx
@@ -34,7 +34,7 @@ Esta factura rectifica y aplica una diferencia de importes a una factura anterio
     }
   ],
   "full_invoice_number": "2024-000015",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura rectificativa.",
   "rectificative_type_key": "I",
@@ -52,9 +52,9 @@ Esta factura rectifica y aplica una diferencia de importes a una factura anterio
       "tax_type_key": "01",
       "vat_tax_regime_key": "01",
       "operation_type_key": "S1",
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ],
   "qr_as_bmp": false
