--- a/api-reference/facturas/examples/rectificative-substitution.mdx
+++ b/api-reference/facturas/examples/rectificative-substitution.mdx
@@ -34,7 +34,7 @@ Esta factura rectifica y sustituye a una factura anterior (`2024-000008`) que te
     }
   ],
   "full_invoice_number": "2024-000014",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura rectificativa.",
   "rectificative_type_key": "S",
@@ -54,9 +54,9 @@ Esta factura rectifica y sustituye a una factura anterior (`2024-000008`) que te
       "tax_type_key": "01",
       "vat_tax_regime_key": "01",
       "operation_type_key": "S1",
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ],
   "qr_as_bmp": false
