--- a/api-reference/facturas/examples/simplified-substitution.mdx
+++ b/api-reference/facturas/examples/simplified-substitution.mdx
@@ -31,7 +31,7 @@ import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
     }
   ],
   "full_invoice_number": "2024-000012",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura ordinaria por entrega de mercancías.",
   "substituted_invoices": [
@@ -48,9 +48,9 @@ import ClientDefaultHeaders from '/snippets/client-default-headers.mdx';
       "tax_type_key": "01",
       "vat_tax_regime_key": "01",
       "operation_type_key": "S1",
-      "tax_base": "200.00",
-      "tax_rate": "21.00",
-      "tax_quota": "42.00"
+      "tax_base": 200.00,
+      "tax_rate": 21.00,
+      "tax_quota": 42.00
     }
   ],
   "qr_as_bmp": false
