--- a/api-reference/facturas/examples/simplified.mdx
+++ b/api-reference/facturas/examples/simplified.mdx
@@ -23,7 +23,7 @@ El campo `invoice_type_key` utiliza el valor `F2` (Factura Simplificada y Factur
     "tax_id_number": "J27290840"
   },
   "full_invoice_number": "2024-000010",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-03",
   "operation_description": "Factura simplificada por entrega de mercancías.",
   "total_quota": 42.00,
@@ -33,9 +33,9 @@ El campo `invoice_type_key` utiliza el valor `F2` (Factura Simplificada y Factur
       "tax_type_key": "01",
       "vat_tax_regime_key": "01",
       "operation_type_key": "S1",
-      "tax_base": "200.00",
-      "tax_rate": "21.00",
-      "tax_quota": "42.00"
+      "tax_base": 200.00,
+      "tax_rate": 21.00,
+      "tax_quota": 42.00
     }
   ],
   "qr_as_bmp": false
