--- a/api-reference/facturas/examples/basic-deferred.mdx
+++ b/api-reference/facturas/examples/basic-deferred.mdx
@@ -32,7 +32,7 @@ La petición se debe hacer a la URL `…/api/invoices/deferred`.
     }
   ],
   "full_invoice_number": "2025-000001",
-  "fiscal_year": "2025",
+  "fiscal_year": 2025,
   "issue_date": "2025-01-01",
   "operation_description": "Factura ordinaria por entrega de mercancías.",
   "total_quota": 21.00,
@@ -42,9 +42,9 @@ La petición se debe hacer a la URL `…/api/invoices/deferred`.
       "tax_type_key": "01", // Impuesto sobre el Valor Añadido (IVA)
       "vat_tax_regime_key": "01", // Operación de régimen general
       "operation_type_key": "S1", // Operación Sujeta y No exenta - Sin inversión del sujeto pasivo
-      "tax_base": "100.00",
-      "tax_rate": "21.00",
-      "tax_quota": "21.00"
+      "tax_base": 100.00,
+      "tax_rate": 21.00,
+      "tax_quota": 21.00
     }
   ]
 }
