Endpoint para obtener info de una factura concreta desde KubiBAI.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-04-25" description="v0.2.1beta">
+  - Nevo endpoint para obtener información de un factura concreta.
+  - La información sobre registros de facturación incluye el campo `xml_contents` con los contenidos del XML enviado a Veri*Factu.
+</Update>
+
 <Update label="2025-04-08" description="v0.2.0beta">
   - Información referente a los [registros de facturación en diferido](/basic-concepts#registros-de-facturacion-diferidos).
   - Nuevos endpoints para el envío de registros de facturación en diferido de **creación** y de **anulación**.
