Añadido campo record_type.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-05-20" description="v0.2.2">
+  - Se ha añadido el campo `record_type` a la información de los registros de facturación que devuelve la API.
+</Update>
+
 <Update label="2025-04-25" description="v0.2.1beta">
   - Nevo endpoint para obtener información de un factura concreta.
   - La información sobre registros de facturación incluye el campo `xml_contents` con los contenidos del XML enviado a Veri*Factu.
