Info adicional sobre rectificaciones, subsanaciones y anulaciones.

--- a/basic-concepts.mdx
+++ b/basic-concepts.mdx
@@ -62,3 +62,14 @@ Los registros de facturación se encadenan de forma independiente dentro de cada
 <Tip>Una empresa puede tener uno o varios SIFs. Por ejemplo, una empresa con varias tiendas puede operar con un SIF por cada establecimiento, de forma que el encadenamiento/trazabilidad de las facturas se trate por separado, pero **no es obligatorio hacerlo**.</Tip>
 
 <Info>Nuestro sistema se encarga de generar los datos de encadenamiento de forma automática en base a las facturas previamente procesadas para los correspondientes SIFs y empresas.</Info>
+
+## Rectificaciones, subsanaciones y anulaciones
+
+1. Si los errores detectados **tras la emisión** están previstos en el Reglamento de Obligaciones de Facturación (ROF), aprobado por el Real Decreto 1619/2012, deberá efectuarse su rectificación de acuerdo con el procedimiento que indique el ROF según el tipo de error de que se trate, lo que implica expedir nueva/s factura/s rectificativas de la factura original errónea, en la/s que se pondrán los códigos de los campos de RF qué le/s corresponda/n de entre los que se detallan en la OM HAC/1177/2024.
+2. Si los errores detectados tras la emisión NO están contemplados en el ROF, pero afectan a campos del registro de facturación (RF) generado al emitir la factura (que, digamos, "no se ven" en la factura impresa, es decir, son campos "internos", como ciertas codificaciones tributarias), se debe corregir la factura original (esos datos "internos" de la misma) y se debe generar un RF de alta de subsanación de esa factura donde conste ya la nueva información que proceda.
+
+    Por lo que se refiere al concepto de **subsanación**, este se produce cuando se detecta un error en algún dato del RF cuyo "arreglo" no suponga tener que emplear el procedimiento de rectificación de la factura según el ROF. En este caso, bastará con "reparación o subsanación" de los datos erróneos que había en del registro original mediante la generación de un nuevo registro de alta de subsanación (que tendrá ya los datos correctos).
+3. Si los errores detectados tras la emisión NO están contemplados en el ROF ni afectan a campos del registro de facturación (RF) generado al emitir la factura, se corrige la factura original sin que sea preciso generar un nuevo RF de ningún tipo.
+4. Si se considera que "toda la factura" en sí misma está mal o no debería haberse emitido, siempre que para solucionarlo no deba emplearse algún procedimiento (de rectificativa u otro) previsto en el ROF, se podrá "anular" generando para ello un RF de anulación.
+
+Con carácter general, todas las facturas emitidas, en la medida en que respondan a operaciones realmente efectuadas (como es el caso habitual) **no pueden anularse**. En el caso de que exista alguna diferencia entre lo facturado y la realidad, por ejemplo, que por un defecto de cantidades o de calidades, o por otras razones, y se deba modificar su importe, procederá la emisión de una factura rectificativa, en los términos que establece el ROF (Reglamento de Obligaciones de Facturación, aprobado por el Real Decreto 1619/2012) y la Ley y Reglamento del IVA. Esa rectificación, con carácter general, puede realizarse por medio de la sustitución de la factura inicial por una nueva factura o bien por la modificación de la factura inicial.
