--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-06-06" description="v0.2.3">
+  - Información adicional sobre [rectificaciones, subsanaciones y anulaciones](/basic-concepts#rectificaciones%2C-subsanaciones-y-anulaciones).
+</Update>
+
 <Update label="2025-05-20" description="v0.2.2">
   - Se ha añadido el campo `record_type` a la información de los registros de facturación que devuelve la API.
 </Update>
