Corrección en explicación de vat_tax_regime_key.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-07-16" description="v1.0.0">
+  - Corrección en documentación del campo `vat_tax_regime_key` al dar de alta registros de facturación.
+</Update>
+
 <Update label="2025-06-06" description="v0.2.3">
   - Información adicional sobre [rectificaciones, subsanaciones y anulaciones](/basic-concepts#rectificaciones%2C-subsanaciones-y-anulaciones).
 </Update>
