--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-07-22" description="v1.0.0">
+  - Soporte para creación de SIFs de empresa con datos extranjeros.
+</Update>
+
 <Update label="2025-07-16" description="v1.0.0">
   - Corrección en documentación del campo `vat_tax_regime_key` al dar de alta registros de facturación.
 </Update>
