Mejoras en documentación.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-08-11" description="v1.1.0">
+  - Nuevo [endpoint para obtener el estado de un registro de facturación](/openapi-reference/consultar-registro-de-facturación-con-veri*factu) haciendo previamente una consulta a Veri*Factu.
+  - Nuevo [endpoint para el envío de facturas en lote](/openapi-reference/enviar-registros-de-facturación-en-lote) disponible en **entorno de pruebas**.
+</Update>
+
 <Update label="2025-07-22" description="v1.0.0">
   - Soporte para creación de SIFs de empresa con datos extranjeros.
 </Update>
