--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-08-25" description="v1.1.1">
+  - Nuevo parámetro [use_batched_callbacks](openapi-reference/enviar-registro-de-facturación#body-use-batched-callbacks) para procesar los callbacks de las facturas en grupo en lugar de hacerlo de una en una.
+</Update>
+
 <Update label="2025-08-11" description="v1.1.0">
   - Nuevo [endpoint para obtener el estado de un registro de facturación](/openapi-reference/consultar-registro-de-facturación-con-veri*factu) haciendo previamente una consulta a Veri*Factu.
   - Nuevo [endpoint para el envío de facturas en lote](/openapi-reference/enviar-registros-de-facturación-en-lote) disponible en **entorno de pruebas**.
