Nuevo endpoint de buscar facturas.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-09-24" description="v1.1.1">
+  - Nuevo [endpoint para buscar registros de facturación por año fiscal y número de factura](/openapi-reference/buscar-registros-de-facturación).
+  - Se han añadido más campos a la respuestas de registros de facturación: `issue_date`, `created_at` y `csv` (Código Seguro de Verificación).
+</Update>
+
 <Update label="2025-08-25" description="v1.1.1">
   - Nuevo parámetro [use_batched_callbacks](openapi-reference/enviar-registro-de-facturación#body-use-batched-callbacks) para procesar los callbacks de las facturas en grupo en lugar de hacerlo de una en una.
 </Update>
