Enpoint para Consultar la validez de un NIF/CIF. Reorganización.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,8 +3,12 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-09-29" description="v1.1.1">
+  - Nuevo [endpoint para consulta NIF/CIF con el Web Service de Calidad de datos identificativos de la AEAT](/openapi-common/consultar-la-validez-de-un-nifcif) para consultar la validez de un NIF/CIF.
+</Update>
+
 <Update label="2025-09-24" description="v1.1.1">
-  - Nuevo [endpoint para buscar registros de facturación por año fiscal y número de factura](/openapi-reference/buscar-registros-de-facturación).
+  - Nuevo [endpoint para buscar registros de facturación por año fiscal y número de factura](/openapi-common/buscar-registros-de-facturación).
   - Se han añadido más campos a la respuestas de registros de facturación: `issue_date`, `created_at` y `csv` (Código Seguro de Verificación).
 </Update>
 
