Docs con indicaciones para pasar a producción.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-10-10" description="v1.1.2">
+  - Documentación con [indicaciones para el paso al entorno de producción](/toproduction) para consultar la validez de un NIF/CIF.
+</Update>
+
 <Update label="2025-09-29" description="v1.1.1">
   - Nuevo [endpoint para consulta NIF/CIF con el Web Service de Calidad de datos identificativos de la AEAT](/openapi-common/consultar-la-validez-de-un-nifcif) para consultar la validez de un NIF/CIF.
 </Update>
