--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,11 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+
+<Update label="2025-10-17" description="v1.1.3">
+  - Añadido [endpoint para obtener datos de una empresa](/openapi-reference/obtener-datos-de-empresa).
+</Update>
+
 <Update label="2025-10-15" description="v1.1.3">
   - Añadido campo [`client_invoice_id`](/openapi-reference/enviar-registro-de-facturación#body-client-invoice-id) a la creación de registros de facturación para poder espcificar el identificador único de la factura **dentro del sistema del cliente** y poder hacer referencia a ella en sucesivas consultas sobre la factura.
 </Update>
