--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,9 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-10-17" description="v1.1.3">
+  - Añadido [endpoint para listar registros de facturación entre fechas](/openapi-reference/listar-registros-de-facturación-entre-fechas).
+</Update>
 
 <Update label="2025-10-17" description="v1.1.3">
   - Añadido [endpoint para obtener datos de una empresa](/openapi-reference/obtener-datos-de-empresa).
