Actualizada la documentación del endpoint de listado de registros con filtros.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,7 +4,7 @@ description: 'Registro de actualizaciones de la documentación'
 ---
 
 <Update label="2025-10-17" description="v1.1.3">
-  - Añadido [endpoint para listar registros de facturación entre fechas](/openapi-reference/listar-registros-de-facturación-entre-fechas).
+  - Añadido [endpoint para listar registros de facturación con filtros](/openapi-reference/listar-registros-de-facturación-con-filtros).
 </Update>
 
 <Update label="2025-10-17" description="v1.1.3">
