Campo sif_id en varias respuestas.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-10-20" description="v1.1.4">
+  - Las respuestas que incluyen datos de registros de facturación (altas, anulaciones, etc.) incluyen el campo `sif_id`.
+</Update>
+
 <Update label="2025-10-17" description="v1.1.3">
   - Añadido [endpoint para listar registros de facturación con filtros](/openapi-reference/listar-registros-de-facturación-con-filtros).
 </Update>
