Doc sobre nueva respuesta a query de NIF.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -5,6 +5,7 @@ description: 'Registro de actualizaciones de la documentación'
 
 <Update label="2025-10-20" description="v1.1.4">
   - Las respuestas que incluyen datos de registros de facturación (altas, anulaciones, etc.) incluyen el campo `sif_id`.
+  - La respuesta del [endpoint para consultar la validez de un NIF/CIF](/openapi-common/consultar-la-validez-de-un-nifcif) devuelve también si el NIF en cuestión es de persona física o de persona jurídica.
 </Update>
 
 <Update label="2025-10-17" description="v1.1.3">
