--- a/basic-concepts.mdx
+++ b/basic-concepts.mdx
@@ -20,7 +20,7 @@ Las empresas se pueden dar de alta bien desde el panel web (sección *Empresas*)
 
 ## Certificados
 
-La firma de las comunicaciones con la AEAT debe firmarse con un certificado autorizado. Nosotros hacemos las veces de intermediarios, con lo que no es necesario tener un certificado para cada empresa cliente que emite registros de facturación a la AEAT. Además, **cada intermediario puede optar por usar su propio certificado** (en lugar del nuestro) para la firma de las comunicaciones. Para ello, el intermediario debe estar registrado como **apoderado o colborador social** en la AEAT.
+La firma de las comunicaciones con la AEAT debe firmarse con un certificado autorizado. Nosotros hacemos las veces de intermediarios, con lo que no es necesario tener un certificado para cada empresa cliente que emite registros de facturación a la AEAT. Además, **cada intermediario puede optar por usar su propio certificado** (en lugar del nuestro) para la firma de las comunicaciones. Para ello, el intermediario debe estar [registrado como apoderado o colborador social en la AEAT](https://sede.agenciatributaria.gob.es/Sede/ayuda/consultas-informaticas/colaboracion-social-ayuda-tecnica/alta-gestion-censo-colaboradores-sociales.html), concretamente en la sección de [alta y gestión en el censo de colaboradores sociales](https://www1.agenciatributaria.gob.es/wlpl/TOCS-COLA/identificaAlta.faces).
 
 ## Los registros de facturación
 
