--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-10-21" description="v1.1.5">
+  - Se ha incluido un aclaración sobre [cómo se debe actuar cuando no se puede enviar un registro por problemas técnicos o porque Veri*Factu lo ha rechazado](/basic-concepts#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-por-problemas-técnicos-o-porque-veri-factu-me-lo-ha-rechazado%3F).
+</Update>
+
 <Update label="2025-10-20" description="v1.1.4">
   - Las respuestas que incluyen datos de registros de facturación (altas, anulaciones, etc.) incluyen el campo `sif_id`.
   - La respuesta del [endpoint para consultar la validez de un NIF/CIF](/openapi-common/consultar-la-validez-de-un-nifcif) devuelve también si el NIF en cuestión es de persona física o de persona jurídica.
