--- a/basic-concepts.mdx
+++ b/basic-concepts.mdx
@@ -78,4 +78,4 @@ Con carácter general, todas las facturas emitidas, en la medida en que responda
 
 En estos casos hay que emitir una [subsanación con registro previo rechazado](/api-reference/facturas/examples/correction-no-previous).
 
-Para subsanar un registro que ha sido rechazado anteriormente (por rechazo de Veri*Factu o por problemas técnicos en el envío) debemos enviar el campo `correction_key` con el valor `S` y el campo `previous_rejection_key` con el valor `X`. El resto de campos del registro se pueden mantener idénticos al original, **incluyendo la fecha de emisión** (`issue_date`), que en este caso, puede ser anterior a la actual. Este registro pasará a ser considerado el correcto.
+Para subsanar un registro que ha sido rechazado anteriormente (por rechazo de Veri*Factu o por problemas técnicos en el envío) debemos enviar el campo `correction_key` con el valor `S` y el campo `previous_rejection_key` con el valor `X`. El resto de campos del registro se pueden mantener idénticos al original.
