--- a/basic-concepts.mdx
+++ b/basic-concepts.mdx
@@ -28,9 +28,7 @@ Los registros de facturación son los envíos que se hacen a Veri*Factu (AEAT) p
 
 ## Obligatoriedad del envío de las facturas a Veri*Factu
 
-Salvo en el caso de los [registros de facturación diferidos](#registros-de-facturacion-diferidos), el **registro de facturación** se genera en el momento en que la los datos de la factura son remitidos a nuestro sistema. Tras la generación del registro de facturación este se envía a Veri*Factu (AEAT) para su validación y registro.
-
-La **fecha de expedición** de la factura debe coincidir con la de generación del registro de facturación, es decir, la factura debe sernos enviada en la misma fecha en que es expedida. Además, la factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo** que le permita verificar que la factura ha sido correctamente remitida a la AEAT.
+Salvo en el caso de los [registros de facturación diferidos](#registros-de-facturacion-diferidos), el **registro de facturación** se genera en el momento en que la los datos de la factura son remitidos a nuestro sistema. Tras la generación del registro de facturación este se envía a Veri*Factu (AEAT) para su validación y registro. La factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo** que le permita verificar que la factura ha sido correctamente remitida a la AEAT.
 
 <Info>El QR de cotejo lo genera nuestro servicio una vez recibida y procesada la factura adecuadamente.</Info>
 
