--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,7 +4,7 @@ description: 'Registro de actualizaciones de la documentación'
 ---
 
 <Update label="2025-10-21" description="v1.1.5">
-  - Se ha incluido un aclaración sobre [cómo se debe actuar cuando no se puede enviar un registro por problemas técnicos o porque Veri*Factu lo ha rechazado](/basic-concepts#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-por-problemas-técnicos-o-porque-veri-factu-me-lo-ha-rechazado%3F).
+  - Se ha incluido un aclaración sobre [cómo se debe actuar cuando no se puede enviar un registro porque Veri*Factu lo ha rechazado](/basic-concepts#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-porque-veri-factu-me-lo-ha-rechazado%3F).
 </Update>
 
 <Update label="2025-10-20" description="v1.1.4">
