Aclaración sobre límite de líneas.

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,8 +3,12 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-11-27" description="v1.1.6">
+  - Se ha incluido una aclaración sobre el [ĺimite de 12 líneas en los registros de facturación](/openapi-reference/enviar-registro-de-facturación#body-lines) y sobre cómo se deben agrupoar los conceptos.
+</Update>
+
 <Update label="2025-10-21" description="v1.1.5">
-  - Se ha incluido un aclaración sobre [cómo se debe actuar cuando no se puede enviar un registro porque Veri*Factu lo ha rechazado](/basic-concepts#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-porque-veri-factu-me-lo-ha-rechazado%3F).
+  - Se ha incluido una aclaración sobre [cómo se debe actuar cuando no se puede enviar un registro porque Veri*Factu lo ha rechazado](/basic-concepts#¿qué-debo-hacer-si-no-puedo-enviar-un-registro-porque-veri-factu-me-lo-ha-rechazado%3F).
 </Update>
 
 <Update label="2025-10-20" description="v1.1.4">
