Más info sobre el QR.

--- a/basic-concepts.mdx
+++ b/basic-concepts.mdx
@@ -26,9 +26,11 @@ La firma de las comunicaciones con la AEAT debe firmarse con un certificado auto
 
 Los registros de facturación son los envíos que se hacen a Veri*Factu (AEAT) para el **alta, subsanación y anulación de facturas**.
 
-## Obligatoriedad del envío de las facturas a Veri*Factu
+## Obligatoriedad del envío de las facturas a Veri*Factu y QR
 
-Salvo en el caso de los [registros de facturación diferidos](#registros-de-facturacion-diferidos), el **registro de facturación** se genera en el momento en que la los datos de la factura son remitidos a nuestro sistema. Tras la generación del registro de facturación este se envía a Veri*Factu (AEAT) para su validación y registro. La factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo** que le permita verificar que la factura ha sido correctamente remitida a la AEAT.
+Salvo en el caso de los [registros de facturación diferidos](#registros-de-facturacion-diferidos), el **registro de facturación** se genera en el momento en que la los datos de la factura son remitidos a nuestro sistema. Tras la generación del registro de facturación este se envía a Veri*Factu (AEAT) para su validación y registro.
+
+<Warning>La factura debe ser entregada al receptor (ya sea en versión impresa o digital) con un **QR de cotejo** que le permita verificar que la factura ha sido correctamente remitida a la AEAT. Junto al QR deberá aparecer la frase **«Factura verificable en la sede electrónica de la AEAT» o «VERI*FACTU»**, que deberá tener un tipo de letra y tamaño bien visibles, similares a los del resto de datos de la factura. El código QR deberá tener un tamaño entre **30x30 y 40x40 milímetros**.</Warning>
 
 <Info>El QR de cotejo lo genera nuestro servicio una vez recibida y procesada la factura adecuadamente.</Info>
 
