--- a/changelog.mdx
+++ b/changelog.mdx
@@ -3,6 +3,10 @@ title: Actualizaciones
 description: 'Registro de actualizaciones de la documentación'
 ---
 
+<Update label="2025-12-12" description="v1.1.7">
+  - Se ha añadido un nuevo endpoint para [eliminar SIFs](/openapi-reference/eliminar-sif).
+</Update>
+
 <Update label="2025-11-27" description="v1.1.6">
   - Se ha incluido una aclaración sobre el [ĺimite de 12 líneas en los registros de facturación](/openapi-reference/enviar-registro-de-facturación#body-lines) y sobre cómo se deben agrupoar los conceptos.
 </Update>
